# flavour-craft-cpp

./: .gitignore  CMakeLists.txt  Main.qml  TODO.txt  assets.qrc  main.cpp
cpp_components/DishListModel/: dishlistmodel.cpp  dishlistmodel.h
cpp_components/dish/: danie.cpp  danie.h  dish.cpp  dish.h  dishxd.cpp  dishxd.h
cpp_components/localSearchManager/: localsearchmanager.cpp  localsearchmanager.h
cpp_components/recipeRestHandler/: recipeRestHandler.cpp  recipeRestHandler.h
cpp_components/searchManager/: searchmanager.cpp  searchmanager.h
cpp_components/stringBuilder/: stringBuilder.cpp  stringBuilder.h
cpp_components/systemManager/: systemmanager.cpp  systemmanager.h
cpp_components/webRecipeGetter/: webRecipeGetter.cpp  webRecipeGetter.h
cpp_components/webRecipeScraper/: webRecipeScraper.cpp  webRecipeScraper.h
cpp_components/webRecipeSearch/: webRecipeSearch.cpp  webRecipeSearch.h
localdata/: dish1.txt  dish2.txt  dish3.txt
mainkopia/: Main_kopia.qml
pages/: AboutPage.qml  AddLocalPage.qml  DishPage.qml  MainPage.qml  RemoveLocalPage.qml  SearchLocalPage.qml  SearchOnlinePage.qml  SearchPage.qml  TestPage.qml
ui/AboutDish/: AboutDish.qml
ui/Assets/: iconmonstr-photo-camera-5.afphoto
ui/CustomButton/: CustomButton.qml
ui/CustomTextHolder/: CustomTextHolder.qml
ui/DishDescription/: DishDescription.qml
ui/DishIngredients/: DishIngredients.qml
ui/SearchBar/: SearchBar.qml
ui/UpperPhoto/: UpperPhoto.qml
ui/Values/: Values.qml
